--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     <title>Hello</title>
 </head>
 <body>
-Hello World!
-<h1>Add a heading</h1>
+    <h1>This is my Website</h1>
+    Hello World!
 </body>
 </html>
