--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>This is my Website</h1>
+    <h1 style="color: red;">This is my Website</h1>
     <h2>Second heading</h2>
     Hello World!
 </body>
