--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
+    <style>
+        h1{
+            color: rebeccapurple;
+        }
+    </style>
 </head>
 <body>
     <h1 style="color: red;">This is my Website!!</h1>
