--- a/hello.html
+++ b/hello.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1 style="color: red;">This is my Website!!</h1>
+    <h1 style="color: red;">This is my Website</h1>
     <h2>Second heading</h2>
     Hello World!
 </body>
