--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1 style="color: red;">This is my Website!!</h1>
+    <h2>Adding new heading</h2>
     <h2>Second heading</h2>
     Hello World!
 </body>
